objects/ssot__DiversityEquityInclusionSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AgeGroup__c</fullName>
        <label>Age Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclsReportingPeriodId__c</fullName>
        <label>Disclsoure Reporting Period Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiversityCategory__c</fullName>
        <label>Diversity Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiversityType__c</fullName>
        <label>Diversity Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeePercentage__c</fullName>
        <label>Employee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeType__c</fullName>
        <label>Employee Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentType__c</fullName>
        <label>Employment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Gender__c</fullName>
        <label>Gender</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Diversity Equity Inclusion Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Race__c</fullName>
        <label>Race</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubsidiaryAccountId__c</fullName>
        <label>Subsidiary Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382305616_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DiversityEquityInclusionSummary_Disc_rel</label>
        <referenceTo>ssot__DisclosureReportingPeriod__dlm</referenceTo>
        <relationshipLabel>DiversityEquityInclusionSummary_Disc_rel</relationshipLabel>
        <relationshipName>rel_1747382305616_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382309916_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DiversityEquityInclusionSummary_Loca_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>DiversityEquityInclusionSummary_Loca_rel</relationshipLabel>
        <relationshipName>rel_1747382309916_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382320466_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DiversityEquityInclusionSummary_Subs_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>DiversityEquityInclusionSummary_Subs_rel</relationshipLabel>
        <relationshipName>rel_1747382320466_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>